# mtg-sdk

./: .gitignore  LICENSE  Makefile  README.md  candidates.txt  fetch_candidates.py  pyproject.toml  supsup.py
data/: candidates.txt  commanders.txt
src/api/: Catalog.py  Collection.py  List.py  __init__.py  api.py  endpoints.py
src/api/cards/: __init__.py  autocomplete.py  collection.py  id.py  named.py  random.py  search.py
src/base/: Base.py  __init__.py
src/cards/: Card.py  CardFace.py  Preview.py  RelatedCard.py  __init__.py
src/cards/endpoints/: __init__.py  _autocomplete.py  _collection.py  _id.py  _named.py  _random.py  _search.py
src/misc/: Color.py  Frame.py  FrameEffect.py  Identifier.py  Language.py  Layout.py  __init__.py
src/symbols/: Symbol.py
tests/layout/: test_layouts.py
tests/layout/data/: adventure.json  art_series.json  augment.json  battle.json  case.json  class.json  double_faced_token.json  emblem.json  flip.json  host.json  leveler.json  meld.json  modal_dfc.json  mutate.json  normal.json  planar.json  prototype.json  reversible_card.json  saga.json  scheme.json  split.json  token.json  transform.json  vanguard.json
