[tool.poetry]
name = "scryfall"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <francis.de.ladurantaye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^2.2.1"
requests = "^2.31.0"
loguru = "^0.7.2"
flake8 = "^7.0.0"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"
tqdm = "^4.66.2"
types-tqdm = "^4.66.0.20240106"
pandas-stubs = "^2.2.0.240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 10
